# singularity-rag-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.main  README.md  docker-compose.dev.yml  docker-compose.yml  features.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-publish.yml
notebooks/: ingest.ipynb  result_analysis.ipynb
src/: main.py
